Got the generation working nicely (swagger -> ts)
